/* Verb */ +senses <break#9002213>

--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -78,9 +78,20 @@
 # {{intransitive}} To cease having a positive connection with some person or group.
 #: ''Disillusioned, he '''broke''' with the Party.''
 #: ''I '''broke''' with John when he wouldn't stop making fun of my sister.''
+# {{transitive}} To [[change]] a [[steady]] [[state]] [[abrupt]]ly.
+#: '''''break''' someone's sleep''
+#: ''Huck's whooping '''broke''' the silence.''
+#: ''His turning on the lights '''broke''' the enchantment.''
+#: ''With the mood '''broken''', what we had been doing seemed pretty silly.''
+# {{intransitive}} {{rfdef}}
+#: ''His voice '''breaks''' when he gets emotional.''
+# {{intransitive|of a [[sound]]}} To become audible suddenly.
+#*{{circa|1843}} [[w:George Lippard|George Lippard]], ''The Battle-Day of Germantown'', reprinted in ''Washington and His Generals "1776"'', page 45&nbsp;[http://google.com/books?id=EM-qNjWrI9YC&pg=PA45&dq=%22sound+of+musquetry%22]:
+#*:Like the crash of thunderbolts{{...}}, the sound of musquetry '''broke''' over the lawn,{{...}}.
 
 ====Quotations====
 {{seeCites}}
+
 ====Usage notes====
 The sense relating to a spell of weather is most likely to be used after a period of persistent good or bad weather; it is rarely used to signify the end of changeable conditions.
 
