--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -154,7 +154,7 @@
 * [[Tamil]]: {{t+|ta|தீவு|xs=Tamil}}
 * [[Telugu]]: [[దీవి]] (dIvi), [[ద్వీపం]] (''dveepaM'')
 * Thai: {{t-|th|เกาะ|tr=''gòr''}}
-* Turkish: {{t+|tr|ada}}
+* Turkish: {{t+|tr|ada}},  {{t|tr|cezire}}
 * Turkmen: {{t+|tk|ada|xs=Turkmen}}
 * Ukrainian: {{t+|uk|острів|m|xs=Ukrainian}}
 * [[Upper Sorbian]]: [[kupa]] {{f}}
