/* Noun */ plural <ungodliness#9015612>

--- a/en/u/ungodliness.742230.wikitext
+++ b/en/u/ungodliness.742230.wikitext
@@ -1,7 +1,9 @@
 ==English==
 ===Noun===
-{{en-noun|-}}
+{{en-noun|es|-}}
+
 # The state of being [[ungodly]].
+# [[ungodly|Ungodly]] behaviour.
 
 [[te:ungodliness]]
 [[vi:ungodliness]]
