--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -57,10 +57,11 @@
 *: Mandarin: {{t-|cmn|先生|tr=xiānsheng|sc=Hani}}
 * Czech: {{t+|cs|pan|m}},  {{t+|cs|pán|m}}
 * Dutch: {{t+|nl|meneer|m}}, {{t+|nl|mijnheer|m}}
-{{trans-mid}}
 * French: {{t+|fr|monsieur|m}}
+{{trans-mid}}
 * German: [[Herr]] {{m}}, [[mein Herr]] {{m}} (''my lord'')
 * Japanese: {{t|ja|だんな|tr=danna}}, {{t|ja|サー|tr=sā}} {{qualifier|in translations from English}}
+* Korean: {{t|ko|선생님|tr=seonsaengnim|sc=Kore}}
 * Kurdish: {{ku-Arab|[[کاک]]}}
 * [[Macedonian]]: {{t-|mk|господин|m|tr=góspodin}},  {{t-|mk|господине|m|tr=gospódine}} ([[vocative case]])
 * Polish: [[pan]] {{m}}, [[panie]] {{m}} ([[vocative case]])
