--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -60,6 +60,7 @@
 * French: {{t+|fr|monsieur|m}}
 {{trans-mid}}
 * German: [[Herr]] {{m}}, [[mein Herr]] {{m}} (''my lord'')
+* Hindi: {{t|hi|श्रीमान|m|tr=śrīmān|sc=Deva}}
 * Japanese: {{t|ja|だんな|tr=danna}}, {{t|ja|サー|tr=sā}} {{qualifier|in translations from English}}
 * Korean: {{t|ko|선생님|tr=seonsaengnim|sc=Kore}}
 * Kurdish: {{ku-Arab|[[کاک]]}}
