--- a/en/m/micro.34067.wikitext
+++ b/en/m/micro.34067.wikitext
@@ -28,6 +28,16 @@
 # [[mic]] (microphone)
 # [[micro#English|micro]] (microcomputer)
 
+----
+
+==Spanish==
+===Noun===
+{{es-noun-m}}
+# {{Chile|Argentina|lang=es}} [[w:transit bus|public bus]]
+
+====Synonyms====
+* {{sense|Argentina}} [[colectivo]]
+
 [[es:micro]]
 [[fr:micro]]
 [[it:micro]]
