--- a/en/m/micro.34067.wikitext
+++ b/en/m/micro.34067.wikitext
@@ -36,6 +36,7 @@
 # {{Chile|Argentina|lang=es}} [[w:transit bus|public bus]]
 
 ====Synonyms====
+* [[ómnibus]]
 * {{sense|Argentina}} [[colectivo]]
 
 [[es:micro]]
