--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -79,7 +79,7 @@
 #: ''Disillusioned, he '''broke''' with the Party.''
 #: ''I '''broke''' with John when he wouldn't stop making fun of my sister.''
 #*'''2001''', [[w:Timothy Taylor (writer)|Timothy Taylor]], ''Stanley Park'', 2003 Counterpoint paperback edition, ISBN 1582432902, page 363&nbsp;[http://google.com/books?id=Ad6uuo8fTWUC&pg=PA363&dq=broke]:
-#*:"You see, Ferdinand Point was the first wave in a culinary revolution," Jeremy went on. "He '''broke''' with with French formality; he '''broke''' with fat and weighty flavours. He kicked free of the past{{...}}"
+#*:"You see, Ferdinand Point was the first wave in a culinary revolution," Jeremy went on. "He '''broke''' with French formality; he '''broke''' with fat and weighty flavours. He kicked free of the past{{...}}"
 # {{transitive}} To [[change]] a [[steady]] [[state]] [[abrupt]]ly.
 #: '''''break''' someone's sleep''
 #: ''Huck's whooping '''broke''' the silence.''
