--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -307,23 +307,33 @@
 
 ----
 
-==Serbian==
+==Serbo-Croatian==
+
+===Etymology===
+From {{etyl|ota|sh}} {{term|آت|tr=at|sc=ota-Arab|lang=ota}}.
 
 ===Noun===
-{{sr-noun|g=m|a=a|+|pl=atovi|cyr=ат}}
+{{sh-noun|g=m|r|ат}}
 
 # [[steed]]
+# [[Arabian]] (horse)
 
 ====Declension====
-{{sr-decl-noun|sc=Latn
-|at|atovi
-|ata|atova
-|atu|atovima
-|ata|atove
-|ate|atovi
-|atom|atovima
-|atu|atovima
+{{sh-decl-noun|sc=Latn
+|at|ati / atovi / atlari
+|ata|ata / atova / atlara
+|atu|atima / atovima / atlarima
+|ata|ate / atove / atlare
+|ate|ati / atovi / atlari
+|atu|atima / atovima / atlarima
+|atom|atima / atovima / atlarima
 }}
+
+====Derived terms====
+* {{l|sh|atkinja}}
+* {{l|sh|atlija}}
+* {{l|sh|atmejdan}}
+* {{l|sh|atski}}
 
 ----
 
