t+is:[[fúskari]] t+is:[[loddari]] ([[WT:EDIT|Assisted]]) <quack#9032989>

--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -105,6 +105,7 @@ shortening of  [[Quack-salver]] ([[Quack-saluer]]), from {{etyl|dum}} [[kwaksalv
 * German: {{t+|de|Quacksalber|m}}
 {{trans-mid}}
 * Greek: {{t|el|τσαρλατάνος|m}} (tsarlatános)
+* Icelandic: {{t|is|fúskari|m}},  {{t|is|loddari|m}}
 * Italian: {{t+|it|ciarlatano|m}}
 * Japanese: {{t|ja|ペテン師|tr=peten-shi}}
 * Russian: {{t+|ru|шарлатан|m|tr=šarlatán}}
