--- a/en/m/Maccabees.801819.wikitext
+++ b/en/m/Maccabees.801819.wikitext
@@ -10,7 +10,7 @@
 ===Proper noun===
 {{en-proper-noun}}
 # {{biblical}}  A book of the [[Old Testament]] [[Apocrypha]].
-# {{history}} A Jewish [[liberation]] movement who fought for, and established independence in the [[Land of Israel]] during the second and first centuries BC.
+# {{history}} A Jewish [[liberation]] movement who fought for, and established, independence in the [[Land of Israel]] during the second and first centuries BC.
 
 ====Related terms====
 *[[Macc.]]
