t+et:[[teadlik]] ([[WT:EDIT|Assisted]]) <in the know#9039831>

--- a/en/i/in the know.742284.wikitext
+++ b/en/i/in the know.742284.wikitext
@@ -24,7 +24,7 @@
 * {{trreq|Czech}}
 * {{trreq|Danish}}
 * {{trreq|Dutch}}
-* {{trreq|Estonian}}
+* Estonian: {{t|et|teadlik}}
 * Finnish: {{t-|fi|tietävä}}
 * French: {{t+|fr|au courant}}
 * {{trreq|German}}
