iwiki +[[:li:theory]] <theory#9042111>

--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -238,6 +238,7 @@ English since 1613, from {{etyl|fr}} {{term|lang=fr|théorie}} < {{etyl|la}} {{t
 [[kk:theory]]
 [[ku:theory]]
 [[lo:theory]]
+[[li:theory]]
 [[hu:theory]]
 [[ml:theory]]
 [[ja:theory]]
