--- a/en/c/centralisations.719953.wikitext
+++ b/en/c/centralisations.719953.wikitext
@@ -1,4 +1,3 @@
-
 ==English==
 
 ===Noun===
@@ -6,7 +5,14 @@
 
 # {{plural of|[[centralisation]]}}
 
-[[Category:English plurals]]
+----
+
+==French==
+
+===Noun===
+'''centralisations''' {{f|p}}
+
+# {{plural of|[[centralisation#French|centralisation]]|lang=fr}}
 
 [[ar:centralisations]]
 [[fr:centralisations]]
