--- a/en/p/pajamas.4756.wikitext
+++ b/en/p/pajamas.4756.wikitext
@@ -32,6 +32,7 @@ From the {{etyl|fa}} {{fa-Arab|[[پايجامه]]}} {{IPA|/pɑjʤɑme}}/ meaning
 [[Category:Clothing]]
 
 [[et:pajamas]]
+[[fa:pajamas]]
 [[pl:pajamas]]
 [[vi:pajamas]]
 [[zh:pajamas]]
