--- a/en/i/individuation.742109.wikitext
+++ b/en/i/individuation.742109.wikitext
@@ -8,6 +8,7 @@
 # {{philosophy}} The [[distinction]] of the [[individual]] from the [[general]] or [[universal]]
 # {{biology}} the [[differentiation]] of tissues
 
+[[et:individuation]]
 [[fr:individuation]]
 [[ru:individuation]]
 [[ta:individuation]]
