--- a/en/m/maximum.34063.wikitext
+++ b/en/m/maximum.34063.wikitext
@@ -32,7 +32,7 @@ French from {{etyl|la}} ''[[#Latin|maximum]]''.
 * Chinese: [[最]][[大]] (zui da, zui4 da4)
 * Esperanto: {{t-|eo|maksimumo|xs=Esperanto}}
 * Finnish: {{t+|fi|maksimi}}
-* French: [[maximum'French|maximum]]
+* French: {{t|fr|maximum|m}}
 * German: {{t+|de|Maximum|n}}
 * Italian: {{t+|it|massimo|m}}
 {{trans-mid}}
