+{{rfc-level|Noun at L4+ not in L3 Ety section|lang=la}} <maximum#9067135>

--- a/en/m/maximum.34063.wikitext
+++ b/en/m/maximum.34063.wikitext
@@ -124,6 +124,7 @@ French from {{etyl|la}} ''[[#Latin|maximum]]''.
 neutral of ''[[maximus]]''
 
 ====Noun====
+{{rfc-level|Noun at L4+ not in L3 Ety section|lang=la}}
 '''maximum'''
 # [[#Noun|maximum]]
 
