/* Noun */ level <maximum#9067902>

--- a/en/m/maximum.34063.wikitext
+++ b/en/m/maximum.34063.wikitext
@@ -123,8 +123,7 @@ French from {{etyl|la}} ''[[#Latin|maximum]]''.
 ===Etymology===
 neutral of ''[[maximus]]''
 
-====Noun====
-{{rfc-level|Noun at L4+ not in L3 Ety section|lang=la}}
+===Noun===
 '''maximum'''
 # [[#Noun|maximum]]
 
