--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -94,6 +94,8 @@ Origin uncertain.  Apparently representing {{etyl|ang}} {{term||beonet-}} (attes
 # Any of various stiff or reedy [[grasses]].
 #* '''1888''', Rudyard Kipling, ‘The Strange Ride of Morrowbie Jukes’, ''The Phantom ’Rickshaw and Other Tales'', Folio Society 2005, p. 121:
 #*: Gunga Dass gave me a double handful of dried '''bents''' which I thrust down the mouth of the lair to the right of his, and followed myself, feet foremost [...].
+#*'''1913''', DH Lawrence, ''Sons and Lovers'', Penguin 2006, pp. 277-8:
+#*:Clusters of strong flowers rose everywhere above the coarse tussocks of '''bent'''.
 # A grassy area, [[grassland]].
 
 [[Category:1000 English basic words]]
