--- a/en/w/widebodied.856004.wikitext
+++ b/en/w/widebodied.856004.wikitext
@@ -6,7 +6,9 @@
 {{en-adj}}
 
 # {{aeronautics}} An [[airliner]] that can seat more than six passengers in each row, in [[economy]] seating.
-#: '''''Widebodied''' jets, like the 747, the DC-10, and the L-1011, introduced the possibility of low-cost air travel.
+#: '''''Wide-bodied''' jets, like the 747, the DC-10,  L-1011, introduced the possibility of low-cost air travel. An example would be CourtLine, which was the first 'no frills' airline. They used L-1011s
+== English ==
+rbal air travel.
 
 ====Translations====
 {{trans-top}}
