iwiki +[[:sv:gamble]] <gamble#9074345>

--- a/en/g/gamble.34097.wikitext
+++ b/en/g/gamble.34097.wikitext
@@ -99,6 +99,7 @@ From {{etyl|ang}} [[gamenian]] 'to play', either via a dialectal survival of {{e
 [[hu:gamble]]
 [[nl:gamble]]
 [[fi:gamble]]
+[[sv:gamble]]
 [[ta:gamble]]
 [[te:gamble]]
 [[vi:gamble]]
