--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -13,7 +13,7 @@ English since 1613, from {{etyl|fr}} {{term|lang=fr|théorie}} < {{etyl|la}} {{t
 # {{countable}} An [[unproven]] [[conjecture]].
 #: ''I have a '''theory''' about who broke into the school last night, but I have no proof to back it up.''
 # {{uncountable}} An [[expectation]] of what [[should]] [[happen]], [[barring]] [[unforeseen]] [[circumstances]].
-#: ''So we’ll be there in three hours?'' — ''That’s the '''theory'''.''
+#: ''So we’ll be there in three hours?'' — ''Yes, that’s the '''theory'''.''
 # {{countable}} {{science}} A [[coherent]] [[statement]] or set of statements that [[attempt]]s to [[explain]] [[observe]]d [[phenomenon|phenomena]].
 #: ''There is now a well-developed '''theory''' of electrical charge.''
 # {{countable}} {{science}} A [[logical]] structure that enables one to [[deduce]] the possible results of every [[experiment]] that falls within its purview.
