--- a/en/v/vote with one's feet.774902.wikitext
+++ b/en/v/vote with one's feet.774902.wikitext
@@ -17,6 +17,9 @@
 #* '''2005''', Diane E. Davis, ''Political Power and Social Theory'', Elsevier, ISBN 0762311908, page 188:
 #*: The conventional wisdom ca. 1980 was that if an investor did not like the way a firm was managed, she could '''vote with her feet''', moving her money elsewhere.
 
+====Hypernymy====
+* [[vote]]
+
 ====Translations====
 {{trans-top|to express one's preferences through one's actions}}
 * {{trreq|Arabic}}
