--- a/en/m/minimum.34064.wikitext
+++ b/en/m/minimum.34064.wikitext
@@ -98,6 +98,30 @@ From {{etyl|la|en}} {{term|minimus||lang=la|least, smallest}}
 
 ----
 
+==Serbo-Croatian==
+
+===Pronunciation===
+* {{IPA|/mǐnimum/|lang=sh}}
+* {{hyphenation|mi|ni|mum}}
+
+===Noun===
+{{sh-noun|g=m|head=mìnimum|r|минимум|мѝнимум}}
+
+# [[#English|minimum]]
+
+====Declension====
+{{sh-decl-noun
+|minimum|minimumi
+|minimuma|minimuma
+|minimumu|minimumima
+|minimum|minimume
+|minimume|minimumi
+|minimumu|minimumima
+|minimumom|minimumima
+}}
+
+----
+
 ==Swedish==
 
 ===Noun===
