iwiki +[[:es:division]] <division#9095321>

--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -223,6 +223,7 @@ From Latin ''[[divisio]]'', noun of process form from perfect passive participle
 [[de:division]]
 [[et:division]]
 [[el:division]]
+[[es:division]]
 [[fa:division]]
 [[fr:division]]
 [[ko:division]]
