--- a/en/p/public school.34050.wikitext
+++ b/en/p/public school.34050.wikitext
@@ -9,8 +9,9 @@
 ====Translations====
 {{trans-top|private school}}
 * Finnish: {{t-|fi|yksityiskoulu}}
-{{trans-mid}}
 * Portuguese: {{t|pt|escola particular}}
+{{trans-mid}}
+* Serbian: {{t|sr|приватна школа|f|tr=privatna škola|sc=Cyrl}}
 {{trans-bottom}}
 
 {{trans-top|publicly administered school}}
