t+da:[[sabelkat]] t-balance ([[WT:EDIT|Assisted]]) <sabre-toothed tiger#9108551>

--- a/en/s/sabre-toothed tiger.801837.wikitext
+++ b/en/s/sabre-toothed tiger.801837.wikitext
@@ -11,10 +11,11 @@
 
 ====Translations====
 {{trans-top|prehistoric cat}}
+* Danish: {{t|da|sabelkat|c}}
 * Finnish: {{t-|fi|sapelihammastiikeri}}
 * German: {{t+|de|Säbelzahntiger|m}}
-* Norwegian: {{t|no|sabeltanntiger|m}}
 {{trans-mid}}
+* Norwegian: {{t|no|sabeltanntiger|m}}
 * Portuguese: {{t-|pt|tigre-dente-de-sabre|m}}
 * Spanish: {{t|es|diente de sable|m}}
 {{trans-bottom}}
