--- a/en/m/misbrand.855660.wikitext
+++ b/en/m/misbrand.855660.wikitext
@@ -4,6 +4,10 @@
 ===Verb===
 {{en-verb}}
 # {{business|marketing}} To make a mistake in [[branding]] a product or service, as by poor association of the name in a significant group of potential customers.
+# {{legal}} In the law of food and drugs, to convey false or misleading information about a product.
+
+====Derived terms====
+*[[misbrander]]
 
 [[vi:misbrand]]
 [[zh:misbrand]]
