--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -35,14 +35,15 @@ From {{etyl|ang}} ''[[bindan]]'', from {{proto|Germanic|benđanan}} (cf. West Fr
 * German: [[verbinden]], [[konnektieren]]
 * [[Ido]]: [[bindar]]
 * Indonesian: [[ikat]], [[sambung]], [[hubung]]
-{{trans-mid}}
 * Italian: to connect: [[legare]], to couple: [[connettere]], to produce a book: [[rilegare]]
+{{trans-mid}}
 * Japanese: [[繋ぐ]] ([[つなぐ]], tsunagu), [[繋げる]] ([[つなげる]], tsunageru),  {{t|ja|縛る|tr=shibaru}},  {{t|ja|結ぶ|tr=musubu}}
 * Latin: {{t-|la|conecto|alt=cōnectō}},  {{t+|la|iungo|alt=iungō}},  {{t-|la|necto|alt=nectō}}
 * [[Old Church Slavonic]]: {{tø|cu|вѧсти|tr=vęsti|sc=Cyrs}}
 * Portuguese: {{t+|pt|conectar}}, {{t+|pt|juntar}}, {{t+|pt|copular}}, {{t+|pt|ligar}}
 * Romanian: [[cuplare]] , [[conectare]] , [[legare]]
 * Russian: {{qualifier|imperfective}} {{t+|ru|вязать|tr=vjazát'}},  {{qualifier|imperfective}} {{t|ru|связывать|tr=svjázyvat'}},  {{qualifier|perfective}} {{t+|ru|связать|tr=svjazát'}}
+* [[Scottish Gaelic]]: {{t|gd|cuibhrich}}
 * Spanish: [[atar]] (tie), [[empastar]] (books)
 * Vietnamese: {{t|vi|kết hợp|xs=Vietnamese}},  {{t|vi|liên kết|xs=Vietnamese}},  {{t|vi|nối|xs=Vietnamese}}
 {{trans-bottom}}
