t+nl:[[schacht]] ([[WT:EDIT|Assisted]]) <pledge#9129810>

--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -89,6 +89,7 @@ From {{etyl|enm}} ''[[plege#Middle English|plege]]'' from {{etyl|xno}} ''[[plege
 {{trans-bottom}}
 
 {{trans-top|person who has taken a pledge of allegiance to a fraternity}}
+* Dutch: {{t|nl|schacht}}
 * Finnish: {{t-|fi|kokelas}}
 {{trans-mid}}
 {{trans-bottom}}
