--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -17,6 +17,8 @@ From {{etyl|xno}} ''[[esquirel]]'', from {{etyl|fro}} ''[[escurel]]'' (modern {{
 # Any of the [[rodent]]s of the family [[Sciuridae]] distinguished by their large bushy tail.
 # A [[Freezoner]] (frequently disparaging)
 
+''"Mayo was a '''Squirrel''' because he altered Source."'' [http://cgi.amazing.com/scientology/dict.html]
+
 ====Translations====
 {{trans-top|Rodent}}
 * Albanian: {{t|sq|ketër|m|xs=Albanian}}
