--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -15,9 +15,7 @@ From {{etyl|xno}} ''[[esquirel]]'', from {{etyl|fro}} ''[[escurel]]'' (modern {{
 {{en-noun}}
 
 # Any of the [[rodent]]s of the family [[Sciuridae]] distinguished by their large bushy tail.
-# A [[Freezoner]] (frequently disparaging)
-
-''"Mayo was a '''Squirrel''' because he altered Source."'' [http://cgi.amazing.com/scientology/dict.html]
+# {{often|disparaging}} A [[freezoner]].
 
 ====Translations====
 {{trans-top|Rodent}}
