t+bo:[[ཡོས]] ([[WT:EDIT|Assisted]]) <rabbit#9135211>

--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -130,6 +130,7 @@
 * [[Taos]]: [[pȉwéna]]
 * [[Telugu]]: [[కుందేలు]] (kumdealu)
 * Thai: {{t+|th|กระต่าย|tr=kratàai}}
+* Tibetan: {{t|bo|ཡོས|tr=yos|sc=Tibt}}
 * Turkish: {{t+|tr|tavşan}}
 * [[Tz'utujil]]: [[umul]]
 * [[Tzotzil]]: [[t'ul]]
