--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -83,6 +83,7 @@ From {{etyl|ang}} {{term|bledan|lang=ang}}
 * Turkish: [[kanamak]] [-ar]
 * {{trreq|Vietnamese}}
 * Welsh: {{t|cy|gwaedu|xs=Welsh}}
+* West Frisian: blied
 {{trans-bottom}}
 
 {{trans-top|draw blood}}
