--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -5,7 +5,7 @@
 {{rank|you|not|be|20|at|by|on|her}}
 
 ===Etymology===
-From {{etyl|enm}} {{term|at||at, toward|lang=enm}}, from {{etyl|ang}} {{term|æt||at, near, by, toward|sc=unicode|lang=ang}}, from {{proto|Germanic|ata|at, near, to|lang=en}}, from {{proto|Indo-European|ad|to, near, by}}. Cognate with {{fo}} {{term|at||at, to, toward|lang=fo}}, {{no}} {{term|åt||to|lang=no}}, {{sv}} {{term|åt||for, toward|lang=sv}}.
+From {{etyl|enm}} {{term|at||at, toward|lang=enm}}, from {{etyl|ang}} {{term|æt||at, near, by, toward|sc=unicode|lang=ang}}, from {{proto|Germanic|ata|at, near, to|lang=en}}, from {{proto|Indo-European|ad|to, near, by}}. Cognate with {{fo}} {{term|at||at, to, toward|lang=fo}}, {{no}} {{term|åt||to|lang=no}}, {{sv}} {{term|åt||for, toward|lang=sv}}, {{is}} {{term|að||to, towards|lang=is}}.
 
 ===Pronunciation===
 * {{qualifier|stressed}} {{enPR|ăt}}, {{IPA|/æt/}}, {{SAMPA|/{t/}}
