/* Etymology */ grammar <overline#9144821>

--- a/en/o/overline.775476.wikitext
+++ b/en/o/overline.775476.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-{{prefix|over|line}}, by analogy to [[underline]].
+{{prefix|over|line}}, by analogy with [[underline]].
 
 ===Noun===
 {{en-noun}}
