--- a/en/a/American English.34094.wikitext
+++ b/en/a/American English.34094.wikitext
@@ -30,12 +30,12 @@
 * German: {{t|de|Amerikanisches Englisch}}
 * Hungarian: {{t+|hu|amerikai angol}}
 {{trans-mid}}
-* Japanese: {{t-|ja|アメリカ英語|tr=Amerika eigo}}, {{t|ja|米英語|tr=beieigo}}, {{t-|ja|米語|tr=beigo}}
-* Korean: [[미국 영어]] ([[美國英語]])
+* Japanese: {{t-|ja|アメリカ英語|tr=Amerika Eigo}}, {{t|ja|米英語|tr=Bei-Eigo}}, {{t-|ja|米語|tr=Beigo}}
+* Korean: [[미국 영어]] (Miguk Yeong-eo) ([[美國英語]])
 * Norwegian: {{t-|no|amerikansk-engelsk}}
 * Polish: [[amerykański]] [[angielski]]
 * Portuguese: {{t|pt|inglês americano|m}}
-* Russian: {{t|ru|американский английский}}
+* Russian: {{t|ru|американский английский|m|tr=amerikánskij anglíjskij}}
 * Spanish: {{t|es|ingles americano|m}}
 * Swedish: {{t-|sv|amerikansk engelska}}
 * Turkish: {{t|tr|Amerikan İngilizcesi}}
