/* Translations */ <American English#9148078>

--- a/en/a/American English.34094.wikitext
+++ b/en/a/American English.34094.wikitext
@@ -32,7 +32,7 @@
 {{trans-mid}}
 * Hungarian: {{t+|hu|amerikai angol}}
 * Japanese: {{t-|ja|アメリカ英語|tr=Amerika Eigo}}, {{t|ja|米英語|tr=Bei-Eigo}}, {{t-|ja|米語|tr=Beigo}}
-* Korean: [[미국 영어]] (Miguk Yeong-eo) ([[美國英語]]), {{t|ko|미국 영어|tr=Miguk Yeong-eo|sc=Kore}}, {{t|ko|美國英語|sc=Kore}}
+* Korean: {{t|ko|미국 영어|tr=Miguk Yeong-eo|sc=Kore}} ({{t|ko|美國英語|sc=Kore}})
 * Norwegian: {{t-|no|amerikansk-engelsk}}
 * Polish: [[amerykański]] [[angielski]]
 * Portuguese: {{t|pt|inglês americano|m}}
