t+sm:[[pua'a]] ([[WT:EDIT|Assisted]]) <pig#9148514>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -117,6 +117,7 @@
 * [[Romansch]]: [[portg]]
 * Russian: {{t+|ru|свинья|f|tr=svin’já}}
 * [[Sami]]: [[spiidni]]
+* [[Samoan]]: {{t|sm|pua'a}}
 * [[Scottish Gaelic]]: [[muc]] {{f}}
 * Serbian:
 *: Cyrillic: [[свиња#Serbian|свиња]] {{f}}
