--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -35,7 +35,7 @@ From {{etyl|enm}} ''[[plege#Middle English|plege]]'' from {{etyl|xno}} ''[[plege
 * {{trreq|Indonesian}}
 * {{trreq|Italian}}
 {{trans-mid}}
-* Japanese: {{t|ja|公約|tr=こうやく, kōyaku|sc=Jpan}}
+* Japanese: {{t|ja|公約する|tr=kōyaku suru|sc=Jpan}}
 * {{trreq|Korean}}
 * {{trreq|Malay}}
 * Latin: {{t-|la|spondere}}, {{t-|la|vovere}}
