rfv+noun,etystub <algerine#9174641>

--- a/en/a/algerine.741758.wikitext
+++ b/en/a/algerine.741758.wikitext
@@ -1,9 +1,26 @@
-===English===
-{{rfc-level|header line in prolog, before first L2 header}}
+==English==
+
+===Etymology===
+{{etystub}}
+
+===Adjective===
+{{infl|en|adj}}
+
+# {{rfdef}}
+
+===Noun===
+{{en-noun}}
+
+# A type of cloth.
+
 ===Verb===
-{{rfc-level|header line in prolog, before first L2 header}}
+{{rfv}}
 {{en-verb|algerin|ing}}
-# [[prowling]] with intent of burglarizing.
+
+# to [[prowl]] with intent of burglarizing.
+
+----
+
 ==Italian==
 
 ===Adjective===
