--- a/en/a/algerine.741758.wikitext
+++ b/en/a/algerine.741758.wikitext
@@ -12,7 +12,7 @@
 ===Noun===
 {{en-noun}}
 
-# A type of cloth.
+# A type of loosely woven cloth in stripes of bright colors, used for [[scarf|scarves]], [[shawl]]s and similar.
 
 ===Verb===
 {{rfv}}
