--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -6,15 +6,8 @@
 {{etyl|enm}} {{term|thagh|thagh, thaugh||lang=enm}} from {{etyl|ang|en}} {{term|þeah|þēah|lang=ang}}, later superceded in many dialects by {{etyl|enm}} {{term|though|thogh, though||lang=enm}} from {{etyl|non}} *{{term||þóh}} (later {{term|þó}}), both from {{proto|Germanic|þauh|though}} from {{proto|Indo-European|to-||lang=en}}. Akin to {{etyl|ofs|-}} {{term|þah|þāh||lang=ofs}} "though", {{etyl|osx|-}} {{term|þoh|þōh||lang=osx}} "though" ({{nl}} {{term|doch|doch||lang=nl}}), {{etyl|goh|-}} {{term|doh|dōh||lang=goh}} "though, but, yet, nevertheless" ({{de}} ''[[doch#German|doch]]''). More at [[that]].
 
 ===Pronunciation===
-{| border=1 cellpadding=5
-! !! [[w:IPA|IPA]] !! [[w:SAMPA|SAMPA]]
-|-
-! [[GenAm]]
-| {{IPAchar|/ðoʊ/}} || /DoU/
-|-
-! [[UK]]
-| {{IPAchar|/ðəʊ/}} || /D@U/
-|}
+* {{a|UK}} {{IPA|/ðəʊ/}}, {{SAMPA|/D@U/}}
+* {{a|US}} {{IPA|/ðoʊ/}}, {{SAMPA|/DoU/}}
 * {{audio|en-us-though.ogg|Audio (US)}}
 *: {{rhymes|əʊ}}
 
