--- a/en/d/DVD-R.26220.wikitext
+++ b/en/d/DVD-R.26220.wikitext
@@ -3,6 +3,6 @@
 ==={{initialism}}===
 '''DVD-R'''
 
-# [[digital|Digital]] [[versatile|Versatile]] [[disk|Disk]] - [[recordable|Recordable]].  A form of digital media that is similar to a CD, but has far denser storage and thus greater capacity.  It can only be written to once, but it can be read from an indefinite number of times.
+# {{w|Digital Versatile Disc}} [[recordable]].  A form of digital media that is similar to a CD, but has far denser storage and thus greater capacity.  It can only be written to once, but it can be read from an indefinite number of times.
 
 [[zh:DVD-R]]
