/* {{initialism}} */ disc etc. <DVD-RW#9185404>

--- a/en/d/DVD-RW.26218.wikitext
+++ b/en/d/DVD-RW.26218.wikitext
@@ -3,6 +3,6 @@
 ==={{initialism}}===
 '''DVD-RW'''
 
-# Digital Versatile Disk - Read Writable.  A form of digital media that is similar to a CD, but has far denser capacity and can be written to more than once.
+# {{w|Digital Versatile Disc}} - [[read]]/[[writable]]. A form of digital media that is similar to a CD, but has far greater capacity and can be written to more than once.
 
 [[zh:DVD-RW]]
