/* Noun */ [[pledgeless]] <pledge#9185944>

--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -69,6 +69,9 @@ From {{etyl|enm}} ''[[plege#Middle English|plege]]'' from {{etyl|xno}} ''[[plege
 # A [[drinking]] [[toast]].
 # ''(the pledge):'' A promise to [[abstain]] from [[drinking]] [[alcohol]].
 
+====Derived terms====
+* [[pledgeless]]
+
 ====Translations====
 {{trans-top|solemn promise}}
 * Arabic: {{Arab|[[ضمان]]}} {{IPAchar|(ɖamān)}} {{m}}
