--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -57,7 +57,7 @@
 * [[Basque]]: [[berriro]]
 * [[Breton]]: [[adarre]]
 * Bulgarian: [[отново]] (otnovo), [[пак]] (pak)
-* {{trreq|Burmese}}
+* Burmese: {{t|my|နောက်တဖန်|sc=Mymr}}
 * [[Catalan]]: [[una]] [[altre]] [[vegada]], [[de]] [[nou]]
 * Chinese:
 *: Mandarin: {{qualifier|of future events}} {{t-|cmn|再|tr=zài|sc=Hani}}, {{qualifier|of past events}} {{t-|cmn|又|tr=yòu|sc=Hani}}, {{qualifier|once again}} {{t-|cmn|遍|alt=再...一遍|tr=zai4... yíbiàn|sc=Hani}}, {{t|zh|重新|tr=chóngxīn|sc=Hani}}
