t+pl:[[pies]] ([[WT:EDIT|Assisted]]) <pig#9221978>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -216,6 +216,7 @@
 {{trans-mid}}
 * Greek: {{t+|el|γουρούνι|n|tr=gouroúni}}
 * Norwegian: {{t+|no|purk|m}}
+* Polish: {{t|pl|pies|m}}
 * Spanish: [[milico]] {{m}} {{italbrac|Andes|River Plate region}}
 * Swahili: {{t+|sw|nguruwe|xs=Swahili}}
 {{trans-bottom}}
