--- a/en/m/micro.34067.wikitext
+++ b/en/m/micro.34067.wikitext
@@ -31,13 +31,17 @@
 ----
 
 ==Spanish==
+===Etymology===
+[[apocope|Apocope]] of [[microbús]]
 ===Noun===
 {{es-noun-m}}
 # {{Chile|Argentina|lang=es}} [[w:transit bus|public bus]]
+# {{Mexico|lang=es}} [[minibus]]
 
 ====Synonyms====
 * [[ómnibus]]
 * {{sense|Argentina}} [[colectivo]]
+* {{sense|Mexico}} [[pesero]], [[combi]]
 
 [[es:micro]]
 [[fr:micro]]
