--- a/en/a/allochthonous.802822.wikitext
+++ b/en/a/allochthonous.802822.wikitext
@@ -7,7 +7,7 @@
 # {{geology}} [[buried|Buried]] or found in a place remote from the site of [[formation]].
 
 ====Antonyms====
-[[autochthonous]]
+*[[autochthonous]]
 
 ===References===
 * ''The Dictionary of Difficult Words'' [[http://www.tiscali.co.uk/reference/dictionaries/difficultwords/data/d0000625.html]]
