iwiki +[[:ta:polecat]] <polecat#9236477>

--- a/en/p/polecat.8236.wikitext
+++ b/en/p/polecat.8236.wikitext
@@ -98,6 +98,7 @@ Middle French ''[[pole]]'' [[hen]] + [[cat]] because of its fondness for poultry
 [[pl:polecat]]
 [[ru:polecat]]
 [[fi:polecat]]
+[[ta:polecat]]
 [[te:polecat]]
 [[vi:polecat]]
 [[zh:polecat]]
