--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -5,7 +5,7 @@
 ===Etymology===
 {{liushu|p}}, originally of the [[crescent]] [[moon]].
 
-As part of a character the pictograph 月 is also used to stand for [[Index:Chinese radical/肉|肉]], especially for parts of the body such as {{term|背||back|sc=Hani}}.
+As part of a character the pictograph 月 is also used to stand for [[Index:Chinese radical/肉|肉]], especially for parts of the body such as {{term|背||back|sc=Hani}}; formally the character is [[⺼]], but it is generally drawn identically.
 
 The meaning {{term|Monday}} is a borrowing, via the [[calque]] {{term|月曜日||moon-(day of week)|sc=Hani}}
 
