--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -5,11 +5,12 @@
 ===Etymology===
 {{liushu|p}}, originally of the [[crescent]] [[moon]].
 
-As part of a character the pictograph 月 is also used to stand for [[Index:Chinese radical/肉|肉]], especially for parts of the body such as {{term|背||back|sc=Hani}}; formally the character is [[⺼]], but it is generally drawn identically.
-
 The meaning {{term|Monday}} is a borrowing, via the [[calque]] {{term|月曜日||moon-(day of week)|sc=Hani}}
 
 {{Han etyl}}
+
+====Usage notes====
+As part of a compound, should not be confused with [[⺼]], form of {{term|肉||flesh, meat|sc=Hani}}, which is used for example for parts of the body such as {{term|背||back|sc=Hani}}. These may be drawn identically, as 月, but in careful use they are distinguished, with ⺼ written with unattached diagonal strokes. This is particularly an issue in looking up characters by radical; compare [[Index:Chinese radical/月|月 index]] and [[Index:Chinese radical/肉|肉 index]].
 
 ===Han character===
 {{Han char|rn=74|rad=月|as=00|sn=4|four=7722<sub>0</sub>|canj=月 (B)|ids=⿵[[冂]][[二]]}}
