t+es:[[positronio]] ([[WT:EDIT|Assisted]]) <positronium#9247302>

--- a/en/p/positronium.746650.wikitext
+++ b/en/p/positronium.746650.wikitext
@@ -10,6 +10,7 @@
 {{trans-top|exotic atom}}
 * Italian: {{t-|it|positronio|m}}
 {{trans-mid}}
+* Spanish: {{t|es|positronio|m}}
 {{trans-bottom}}
 
 ====Derived terms====
