--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -15,7 +15,7 @@ From {{etyl|xno}} ''[[esquirel]]'', from {{etyl|fro}} ''[[escurel]]'' (modern {{
 {{en-noun}}
 
 # Any of the [[rodent]]s of the family [[Sciuridae]] distinguished by their large bushy tail.
-# {{often|disparaging}} A [[freezoner]] or other who fails to apply L Ron Hubbard's technology as is considered appropriate. [http://cgi.amazing.com/scientology/dict.html]
+# {{often|disparaging}} A [[freezoner]] or other who fails to apply L Ron Hubbard's technology as is considered appropriate. [http://cgi.amazing.com/scientology/dict.html] [http://www.cs.cmu.edu/~dst/Library/Shelf/la90/la90-6e.html]
 
 ====Translations====
 {{trans-top|Rodent}}
