iwiki +[[:ru:κύων]] <κύων#9251944>

--- a/en/κ/κύων.4255.wikitext
+++ b/en/κ/κύων.4255.wikitext
@@ -33,4 +33,5 @@ The alternate forms [[κύων]] (vocative singular) and [[κύνεσσι]] (dat
 [[li:κύων]]
 [[hu:κύων]]
 [[pt:κύων]]
+[[ru:κύων]]
 [[tr:κύων]]
