--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -58,6 +58,7 @@ From [[Middle English]] ''[[fraccioun]]'' (a breaking), from [[Anglo-Norman]], f
 * Polish: {{t+|pl|ułamek|m}}, {{t+|pl|cząstka|f}}
 * Portuguese: (''Brazil'') [[fração]] {{f}}, (''Portugal'') [[fracção]] {{f}}
 * Russian: {{t+|ru|часть|f}}
+* [[Scottish Gaelic]]: {{t|gd|bìdeag|f}},{{t|gd|criomag|f}},{{t|gd|mìr|m}}
 * Spanish: [[fracción]], {{f}}
 {{trans-bottom}}
 
