iwiki +[[:kn:mill]] <mill#9253348>

--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -284,6 +284,7 @@ From {{etyl|sga|gv}} {{term|mil|lang=sga}}.
 [[fr:mill]]
 [[io:mill]]
 [[it:mill]]
+[[kn:mill]]
 [[kk:mill]]
 [[la:mill]]
 [[hu:mill]]
