t+zh:[[四边形]] ([[WT:EDIT|Assisted]]) <quadrilateral#9253524>

--- a/en/q/quadrilateral.4319.wikitext
+++ b/en/q/quadrilateral.4319.wikitext
@@ -14,6 +14,8 @@
 
 ====Translations====
 {{trans-top|polygon having four sides}}
+* Chinese:
+*: Mandarin: {{t|zh|四边形|tr=sìbiānxíng|sc=Hani}}
 * Czech: {{t-|cs|čtyřúhelník|m}}
 * Dutch: {{t+|nl|vierhoek}}
 * Esperanto: {{t-|eo|kvarlatero|xs=Esperanto}}
