--- a/en/i/in the know.742284.wikitext
+++ b/en/i/in the know.742284.wikitext
@@ -30,7 +30,7 @@
 * {{trreq|German}}
 * {{trreq|Hindi}}
 {{trans-mid}}
-* {{trreq|Hungarian}}
+* Hungarian: {{t|hu|tájékozott}}, {{t|hu|beavatott}}, {{t|hu|jól értesült}}
 * {{trreq|Italian}}
 * {{trreq|Japanese}}
 * {{trreq|Korean}}
