--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -13,22 +13,25 @@ From {{term|bend}}.
 '''bent'''
 
 # {{past of|[[bend]]}}
-# {{colloquial}} {{chiefly|US}} Suffering from [[the bends]]
 
 ====Adjective====
 {{en-adj}}
 
-# Of something that is usually straight: folded.
-# {{derogatory|colloquial}} {{chiefly|UK}} [[homosexual|Homosexual]].
+# {{context|Of something that is usually straight}} folded, dented 
+# {{derogatory|colloquial|chiefly|UK}} [[homosexual|Homosexual]].
 # [[determined|Determined]] or [[insistent]].
 #: ''He was '''bent''' on going to Texas, but not even he could say why.''
 # Of a person leading a life of [[crime]].
 # {{context|slang|football}} [[inaccurate]] at [[shooting]]
 #: ''That shot was so '''bent''' it left the pitch.''
+# {{colloquial|chiefly|US}} Suffering from [[the bends]]
 
 =====Synonyms=====
-* (1): [[crooked]]
-* (2): [[queer]]
+* {{sense|folded}} [[crooked]]
+* {{sense|homosexual}} [[queer]]
+
+======Related terms=====
+* {{sense|determined}} [[hellbent]]
 
 =====Translations=====
 {{trans-top|folded}}
