/* =Related terms */ header level <bent#9262516>

--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -30,7 +30,7 @@ From {{term|bend}}.
 * {{sense|folded}} [[crooked]]
 * {{sense|homosexual}} [[queer]]
 
-======Related terms=====
+=====Related terms=====
 * {{sense|determined}} [[hellbent]]
 
 =====Translations=====
