--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -78,7 +78,7 @@
 * Czech: {{t-|cs|personál|m}}
 * Danish: [[stav]] {{c}}; [[stang]] {{c}}; [[stab]] {{c}}, [[personale]] {{n}}
 * Dutch: [[:nl:medewerkers|medewerkers]] {{m|p}}
-* Finnish: {{rfc-tbot}}{{t-|fi|henkilöstö}}, {{t-|fi|henkilökunta}}
+* Finnish: {{t-|fi|henkilöstö}}, {{t-|fi|henkilökunta}}
 * French: {{t+|fr|personnel|m}}, {{t+|fr|staff|m}}
 * German: {{t+|de|Belegschaft|f}}, {{t+|de|Personal|n}},  {{t+|de|Stab|m}}
 * Italian: {{t+|it|personale|m}}
