--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -59,6 +59,7 @@
 * Portuguese: {{t+|pt|peso}}
 * Romanian: {{t-|ro|greutate|f}}
 * Russian: [[вес]] (v'es) {{m}}
+* Scots: {{t|sco|weicht}}
 * Swedish: {{t+|sv|tyngd|c}}, {{t+|sv|vikt|c}}
 * [[Telugu]]: [[భారము]] (bhaaramu),  {{t|te|బరువు|tr=baruvu}}
 * Turkish: {{t+|tr|ağırlık}}
@@ -82,6 +83,7 @@
 * Portuguese: {{t+|pt|peso}}
 * Romanian: {{t-|ro|greutate|f}}
 * Russian: {{t+|ru|груз|m|tr=gruz}}
+* Scots: {{t|sco|weicht}}
 * Swedish: {{t+|sv|vikt|c}}
 * [[Telugu]]: [[బరువు]] (baruvu)
 {{trans-bottom}}
@@ -97,6 +99,7 @@
 * Hungarian: {{t+|hu|súly}}
 * Japanese: {{t|ja|分銅|tr=fundō}}
 * Russian: {{t+|ru|гиря|f|tr=gír'a}}
+* Scots: {{t|sco|weicht}}
 * Swedish: {{t+|sv|vikt|c}}
 * Turkish: {{t+|tr|ağırlık}}
 {{trans-bottom}}
@@ -111,6 +114,7 @@
 {{trans-mid}}
 * Japanese: {{t|ja|重り|tr=omori}}
 * Russian: [[блин]] (blin) {{m}} ''disc'', [[гиря]] (gír'a) {{f}} ''dumbbell'', [[гантель]] (gantél') {{f}} ''barbell''
+* Scots: {{t|sco|weicht}}
 * Spanish: {{t-|es|pesa|f}}
 * Swedish: {{t+|sv|vikt|c}}
 * Turkish: {{t+|tr|ağırlık}}
@@ -129,6 +133,7 @@
 * Italian: {{t+|it|massa|f}}
 * Japanese: {{t-|ja|重さ|tr=omosa}}, {{t+|ja|重量|tr=jūryō}}, {{t|ja|荷重|tr=kajū}}
 * Russian: [[вес]] (v'es) {{m}}, [[масса]] (mássa) {{f}}
+* Scots: {{t|sco|weicht}}
 * Spanish: {{t+|es|masa|f}}
 * Swedish: {{t+|sv|massa|c}}
 * Turkish: {{t+|tr|ağırlık}}
@@ -144,6 +149,7 @@
 * Italian: {{t+|it|peso|m}}
 * Japanese: {{t-|ja|重さ|tr=omosa}}, {{t|ja|重み|tr=omomi}}
 * Russian: [[вес]] (v'es) {{m}}
+* Scots: {{t|sco|weicht}}
 {{trans-bottom}}
 
 {{checktrans-top}}
