--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -247,6 +247,9 @@ From {{etyl|enm}} {{term|at||at, toward|lang=enm}}, from {{etyl|ang}} {{term|æt
 
 ==Irish==
 
+===Etymology===
+From {{etyl|sga|ga}} {{term|att|lang=sga}}.
+
 ===Noun===
 {{infl|ga|noun|g=m}}
 
