--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -17,6 +17,9 @@ From {{etyl|xno}} {{term|esquirel|lang=xno}}, from {{etyl|fro}} {{term|escurel|l
 # Any of the [[rodent]]s of the family [[Sciuridae]] distinguished by their large bushy tail.
 # {{often|disparaging}} A [[freezoner]] or other who fails to apply L Ron Hubbard's technology as is considered appropriate. [http://cgi.amazing.com/scientology/dict.html] [http://www.cs.cmu.edu/~dst/Library/Shelf/la90/la90-6e.html]
 
+====Related terms====
+*[[heretic]]
+
 ====Translations====
 {{trans-top|Rodent}}
 * Albanian: {{t|sq|ketër|m|xs=Albanian}}
