--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-From {{etyl|fro}} {{term|atendre}} < {{etyl|la}} {{term|attendere||to stretch toward, give heed to}} < {{term|ad||to}} + {{term|tendere||to stretch}}; see [[tend]] and cf. [[attempt]].
+From {{etyl|fro}} {{term|atendre}} < {{etyl|la}} {{term|attendere||to stretch toward, give heed to}} < {{term|ad||to}} + {{term|tendere||to stretch}}; see [[tend]] and compare [[attempt]].
 
 ===Pronunciation===
 * {{audio|en-us-attend.ogg|Audio (US)}}
