/* Etymology */cf(r) → compare <bind#9274980>

--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -2,7 +2,7 @@
 ==English==
 
 ===Etymology===
-From {{etyl|ang}} ''[[bindan]]'', from {{proto|Germanic|benđanan}} (cf. West Frisian {{term|bine|lang=fy}}, Dutch/German ''[[binden]]''), from {{proto|Indo-European|bhendh-}} 'to tie' (cf. Welsh {{term|benn|lang=cy}} 'cart', Latin {{term|offendix|offendīx|lang=la}} 'knot, band', Lithuanian {{term|beñdras|lang=lt}} 'partner', Ancient Greek {{term|peîsma}} 'cable, rope', Sanskrit {{term|badhnāti}} 'he binds').
+From {{etyl|ang}} ''[[bindan]]'', from {{proto|Germanic|benđanan}} (cf. West Frisian {{term|bine|lang=fy}}, Dutch/German ''[[binden]]''), from {{proto|Indo-European|bhendh-}} 'to tie' (compare Welsh {{term|benn|lang=cy}} 'cart', Latin {{term|offendix|offendīx|lang=la}} 'knot, band', Lithuanian {{term|beñdras|lang=lt}} 'partner', Ancient Greek {{term|peîsma}} 'cable, rope', Sanskrit {{term|badhnāti}} 'he binds').
 
 ===Pronunciation===
 * {{IPA|/baɪnd/}}
