/* Etymology */cf(r) → compare <rot#9277023>

--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -164,7 +164,7 @@ Old High German ''[[rōt]]'', akin to Old Saxon ''rōd'', compare Dutch ''[[rood
 ==Old High German==
 
 ===Etymology===
-From {{proto|Germanic|raudhaz|lang=goh}} (cf. Old English {{term|read|rēad|lang=ang}}, Old Norse {{term|rauðr|lang=non}}) < {{proto|Indo-European|reudh-|lang=goh}}.
+From {{proto|Germanic|raudhaz|lang=goh}} (compare Old English {{term|read|rēad|lang=ang}}, Old Norse {{term|rauðr|lang=non}}) < {{proto|Indo-European|reudh-|lang=goh}}.
 
 ===Adjective===
 {{infl|goh|adjective|head=rōt}}
