/* Noun */formatting {{by ellipsis}} using [[Project:AWB|AWB]] <break#9280863>

--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -530,7 +530,7 @@ The sense relating to a spell of weather is most likely to be used after a perio
 #: ''make a '''break''' for the door''
 #: ''It was a clean '''break'''.''
 #: ''prison '''break'''''
-# {{context|by ellipsis}} A [[lucky break]].
+# {{by ellipsis}} A [[lucky break]].
 # {{tennis}} A [[game]] won by the [[receive|receiving]] [[player]](s).
 # {{billiards|snooker|pool}} The first [[shot]] in a game of [[billiards]]
 # {{snooker}} The number of points scored by one player in one visit to the table
