t+da:[[vædde]] ([[WT:EDIT|Assisted]]) <bet#9295638>

--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -68,6 +68,7 @@
 * Bulgarian: {{t|bg|обзалагам се}},  {{t|bg|басирам се}}
 * Chinese: {{zh-tsp|打賭|打赌|dǎdǔ}}
 * Czech: {{t-|cs|vsadit}}, {{t-|cs|vsadit}} se
+* Danish: {{t|da|vædde}}
 * Dutch: {{t+|nl|gokken}}, {{t+|nl|wedden}}
 * Finnish: {{t-|fi|lyödä vetoa}}, {{t-|fi|veikata}}
 * French: {{t+|fr|parier}}
