/* Translations */ hause <American English#9299224>

--- a/en/a/American English.34094.wikitext
+++ b/en/a/American English.34094.wikitext
@@ -19,7 +19,10 @@
 ====Related terms====
 * [[British English]]
 
-====Translations====
+[[File:
+
+
+]]====Translations====
 {{trans-top|English of the United States}}
 * Arabic: {{t|ar|الإنجليزية الأمريكية|f|tr=al-'ingilizíyya al-'amrikíyya|sc=Arab}}
 * Chinese:
