/* Derived terms */ <rot#9299843>

--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -140,6 +140,7 @@ Old High German ''[[rōt]]'', akin to Old Saxon ''rōd'', compare Dutch ''[[rood
 ====Derived terms====
 * [[rothaarig]]
 * [[Rotkehlchen]]
+* [[rot sehen]]
 * [[Rotstift]]
 * [[Rotwein]]
 * [[röten]]
