--- a/en/p/pajamas.4756.wikitext
+++ b/en/p/pajamas.4756.wikitext
@@ -35,5 +35,6 @@ From the {{etyl|fa}} {{fa-Arab|[[پايجامه]]}} {{IPA|/pɑjʤɑme}}/ meaning
 [[fa:pajamas]]
 [[io:pajamas]]
 [[pl:pajamas]]
+[[ta:pajamas]]
 [[vi:pajamas]]
 [[zh:pajamas]]
