--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -96,10 +96,10 @@ From {{etyl|ang}} verb ''[[beodan|bēodan]]'' ‘offer, announce’. Conflation 
 # ''His '''bid''' was $35,000.''
 # {{context|[[ultimate frisbee]]}} A (failed) attempt to [[receive]] or [[intercept]] a [[pass]].
 #: ''Nice '''bid'''!''
-# {{rfv-sense}} {{political science}} The announcement of a goal.
+# {{rfv-sense}} The announcement of a goal.
 #: ''She put in her '''bid''' for the presidency.''
 #: ''He put in his '''bid''' for office.''
-# {{chiefly|political science}} [[attempt]], [[effort]], [[pursuit]]
+# An [[attempt]], [[effort]], [[pursuit]]
 #: ''Their efforts represented a sincere '''bid''' for success.''
 #*'''1967''', [[w:William F. Nolan|William F. Nolan]] and [[w:George Clayton Johnson|George Clayton Johnson]], [[w:Logan's Run|''Logan's Run'']], May 1976 [[w:Bantam Books|Bantam]] edition, ISBN 0553025171, page 16:
 #*:[Running,] Doyle had passed up a dozen chances to go underground. He was swinging east again making another '''bid''' for Arcade.
