--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -19,7 +19,8 @@ From {{etyl|ang}} verb ''[[biddan]]'' ‘ask, demand’. Conflation from {{etyl|
 #: ''She was '''bidden''' to the wedding.''
 # {{transitive}} To [[utter]] a [[greeting]] or [[salutation]].
 #: ''We '''bade''' him farewell.''
-#: '''1999:''' "[H]e walked up to the village of Wall and '''bade''' good morning to the guards on the gate." &mdash; ''Stardust'', Neil Gaiman, page 15 (2001 Perennial Edition).
+#* '''1999''', [[w:Neil Gaiman|Neil Gaiman]], ''Stardust'', page 15 (2001 Perennial Edition).
+#*:''[H]e walked up to the village of Wall and '''bade''' good morning to the guards on the gate.''
 
 =====Translations=====
 {{trans-top|to issue a command}}
