/* Verb */ + verb sense <bid#9314750>

--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -54,6 +54,8 @@ From {{etyl|ang}} verb ''[[beodan|bēodan]]'' ‘offer, announce’. Conflation 
 #: ''Have you ever '''bid''' in an auction?''
 # {{transitive}}  To [[offer]] as a [[price]].
 #: ''She '''bid''' £2000 for the Persian carpet.''
+# {{intransitive}} To make an attempt.
+#: ''He was '''bidding''' for the chance to coach his team to victory once again.''
 # {{context|intransitive|card games}} To [[announce]] one's [[goal]], before starting [[play]].
 # {{context|transitive|card games}} To [[announce]] one's goal, before starting play.
 # {{obsolete}} To [[proclaim]] (a bede, prayer); to [[pray]].
