t+sq:[[{{trreq}}]] t+is:[[{{trreq}}]] t-balance t+cy:[[{{trreq}}]] t+ca:[[{{trreq}}]] ([[WT:EDIT|Assisted]]) <bid#9315010>

--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -109,10 +109,12 @@ From {{etyl|ang}} verb ''[[beodan|bēodan]]'' ‘offer, announce’. Conflation 
 
 =====Translations=====
 {{trans-top|offer at an auction}}
+* {{trreq|Albanian}}
 * {{trreq|Arabic}}
 *: {{trreq|Egyptian Arabic}}
 * {{trreq|Bengali}}
 * Bulgarian: {{t|bg|оферта}}
+* {{trreq|Catalan}}
 * Chinese:
 *: Mandarin: {{t|zh|出價|sc=Hani}}, {{t|zh|出价|tr=chūjià|sc=Hani}}
 * {{trreq|Czech}}
@@ -125,13 +127,14 @@ From {{etyl|ang}} verb ''[[beodan|bēodan]]'' ‘offer, announce’. Conflation 
 * {{trreq|Greek}}
 * {{trreq|Hebrew}}
 * {{trreq|Hindi}}
+* {{trreq|Icelandic}}
 * {{trreq|Indonesian}}
 * Italian: {{t+|it|offerta|f}}
 * {{trreq|Japanese}}
 * {{trreq|Korean}}
 * {{trreq|Latin}}
-* {{trreq|Latvian}}
 {{trans-mid}}
+* {{trreq|Latvian}}
 * {{trreq|Lithuanian}}
 * {{trreq|Maltese}}
 * Norwegian:
@@ -155,6 +158,7 @@ From {{etyl|ang}} verb ''[[beodan|bēodan]]'' ‘offer, announce’. Conflation 
 * {{trreq|Turkish}}
 * {{trreq|Ukrainian}}
 * {{trreq|Vietnamese}}
+* {{trreq|Welsh}}
 {{trans-bottom}}
 
 {{trans-top|missed frisbee pass}}
