t+pt:[[licitação]] t+sv:[[bud]] ([[WT:EDIT|Assisted]]) <bid#9316202>

--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -146,7 +146,7 @@ From {{etyl|ang}} verb ''[[beodan|bēodan]]'' ‘offer, announce’. Conflation 
 *: Nynorsk: {{t-|nn|bud|n|xs=Norwegian Nynorsk}}
 * {{trreq|Persian}}
 * {{trreq|Polish}}
-* {{trreq|Portuguese}}
+* Portuguese: {{t|pt|licitação|f}}
 * {{trreq|Romanian}}
 * Russian: {{t|ru|предлагаемая цена |f|tr=predlagájemaja cená|sc=Cyrl}}, {{t|ru|заявка|f|tr=zajávka|sc=Cyrl}}, {{t|ru|ставка|f|tr=stávka|sc=Cyrl}}
 * {{trreq|Scottish Gaelic}}
@@ -155,7 +155,7 @@ From {{etyl|ang}} verb ''[[beodan|bēodan]]'' ‘offer, announce’. Conflation 
 * {{trreq|Slovak}}
 * {{trreq|Slovene}}
 * Spanish: {{t-|es|licitación|f}}
-* {{trreq|Swedish}}
+* Swedish: {{t|sv|bud}}
 * {{trreq|Tamil}}
 * {{trreq|Telugu}}
 * Thai: {{t|th|ประมูล|tr=bpràmoon|sc=Thai}}
