--- a/en/b/bragging rights.856465.wikitext
+++ b/en/b/bragging rights.856465.wikitext
@@ -6,3 +6,5 @@
 # {{idiom}} The [[prerogative]] to [[praise]] oneself for an [[accomplishment]] or for possession of a [[superior]] [[characteristic]].
 #*'''2008''', Andrea Sachs, "[http://www.time.com/time/magazine/article/0,9171,1820126,00.html Business books (review of ''How to Get Rich'' by Felix Dennis)]," ''Time'', 3 Jul.,
 #*:Worth as much as $900 million, he estimates, the author clearly thinks he has earned '''bragging rights''', and he intends to exercise them.
+
+[[ta:bragging rights]]
