--- a/en/n/Nintendo.775484.wikitext
+++ b/en/n/Nintendo.775484.wikitext
@@ -8,7 +8,7 @@ From [[w:Nintendo|Nintendo Company, Limited]] (任天堂株式会社), the Japan
 ===Noun===
 {{en-noun}}
 
-# {{video games}} A [[w:Nintendo Entertainment System|Nintendo Entertainment System]], or other video game system made by Nintendo.
+# {{video games|trademark}} A [[w:Nintendo Entertainment System|Nintendo Entertainment System]], or other video game system made by Nintendo.
 #: ''Wanna play on my '''Nintendo''' after school?''
 #* '''1995''', David Gladstone, ed., ''British Social Welfare: Past, Present, and Future'', page 274
 #*: There is nothing wrong with the accoutrements of personal affluence, but if the numbers of personal stereos, '''Nintendos''', mobile phones and cars grow […].
@@ -20,10 +20,6 @@ From [[w:Nintendo|Nintendo Company, Limited]] (任天堂株式会社), the Japan
 #*: The only message at home was from my nephew, letting me know my mother was back home, safe and sound, except for a sore "'''Nintendo''' thumb".
 #* '''2007''', Anthony Ham and Alison Bing, ''Morocco'', Lonely Planet, ISBN 1740599748, page 34
 #*: He was far more interested in bullfighting, which was the '''Nintendo''' of the day, only considerably more dangerous<!--;-->
-# {{rfv-sense}} Any video game system.
-
-====Usage notes====
-This term may have trademark status.
 
 ====Translations====
 {{trans-top|Nintendo Entertainment System, or other video game system made by Nintendo}}
