replace g (U+0067) with ɡ (U+0261) in IPA template <togue#9323808>

--- a/en/t/togue.855176.wikitext
+++ b/en/t/togue.855176.wikitext
@@ -1,18 +1,18 @@
 ==English==
 
 ===Pronunciation===
-*{{IPA|/toʊg/}}
+* {{IPA|/toʊɡ/}}
 
 ===Noun===
 {{en-noun|togue}}
 
-# [[lake trout]] (''Salvelinus namaycush''), a freshwater [[char]] of northern North America. 
+# [[lake trout]] (''Salvelinus namaycush''), a freshwater [[char]] of northern North America.
 
 ====Synonyms====
-*[[grey trout]]
-*[[lake char]]
-*[[mackinaw]]
-*[[touladi]]
+* [[grey trout]]
+* [[lake char]]
+* [[mackinaw]]
+* [[touladi]]
 
 ===References===
 Encarta® World English Dictionary [North American Edition]
