iwiki +[[:ta:pusillanimity]] <pusillanimity#9323844>

--- a/en/p/pusillanimity.741240.wikitext
+++ b/en/p/pusillanimity.741240.wikitext
@@ -25,6 +25,7 @@ From the ecclesiastical {{etyl|la}} ''[[pusillanimis]]'', from ''[[pusillus]]'' 
 [[io:pusillanimity]]
 [[ru:pusillanimity]]
 [[fi:pusillanimity]]
+[[ta:pusillanimity]]
 [[te:pusillanimity]]
 [[vi:pusillanimity]]
 [[zh:pusillanimity]]
