--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -58,6 +58,7 @@
 * Finnish: [[mainos]], [[mainostus]]
 * French: {{t+|fr|publicité|f}}, {{t+|fr|pub|f}}, {{t+|fr|annonce|f}}
 * German: [[Anzeige]] {{f}}, [[Werbung]] {{f}}, [[Annonce]] {{f}}, [[Reklameanzeige]] {{f}}
+* {{trreq|Hindi}}
 * Greek: {{t+|el|διαφήμιση|f|tr=diafimisi}}
 * Hebrew: {{t|he|פרסומת|f|tr=pirsomet}}
 * Hungarian: {{t+|hu|hirdetés}}, {{t+|hu|reklám}}
@@ -85,6 +86,7 @@
 * Swedish: [[annons]], [[annonsering]], [[reklam]]
 * [[Tamil]]: {{t|ta|விளம்பரம்|xs=Tamil}}
 * [[Telugu]]: [[వ్యాపార ప్రకటన]]
+* {{trreq|Thai}}
 * Turkish: {{t+|tr|reklâm}}, {{t+|tr|ilan}}, {{t+|tr|duyuru}}
 * Vietnamese: {{t+|vi|quảng cáo|xs=Vietnamese}} ({{t-|vi|廣告|sc=Hani|xs=Vietnamese}}), {{t+|vi|giới thiệu|xs=Vietnamese}}
 * [[Volapük]]: [[noted]], [[reklam]], [[nunam]]
