--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -19,6 +19,8 @@
 #: ''Companies try to sell their products using '''advertisements''' in form of placards, television spots and print publications.''
 # A [[public]] [[notice]].
 #: ''The city council placed an '''advertisement''' in the local newspaper to inform its residents of the forthcoming roadworks.''
+# A recommendation of a particular product, service or person.
+#: The people gave a good advertisement for Wiktionary.
 
 ====Synonyms====
 * {{sense|commercial solicitation}} [[ad]], [[advert]]
