--- a/en/c/crook.34069.wikitext
+++ b/en/c/crook.34069.wikitext
@@ -54,7 +54,18 @@
 <references/>
 
 ===Verb===
-There is no such verb in correct English.  Ha!
+{{en-verb}}
+
+# {{transitive}} To [[bend]].
+#: ''He '''crooked''' his finger toward me.''
+
+====Translations====
+{{trans-top|to bend}}
+* Bulgarian: {{t|bg|извивам}}
+* Finnish: {{t-|fi|koukistaa}}
+{{trans-mid}}
+* German: [[krümmen]]
+{{trans-bottom}}
 
 ===Adjective===
 {{en-adj}}
