/* Verb */ + quote <crook#9343790>

--- a/en/c/crook.34069.wikitext
+++ b/en/c/crook.34069.wikitext
@@ -58,6 +58,8 @@
 
 # {{transitive}} To [[bend]].
 #: ''He '''crooked''' his finger toward me.''
+#* '''1917''', Leo Tolstoy, ''[[s:Anna Karenina|Anna Karenina]]'', part 4, chapter 5 (as translated by [[w:Constance Garnett|Constance Garnett]])
+#*: "...In the following cases: physical defect in the married parties, desertion without communication for five years," he said, '''crooking''' a short finger covered with hair{{...}}
 
 ====Translations====
 {{trans-top|to bend}}
