--- a/en/g/good Lord.741512.wikitext
+++ b/en/g/good Lord.741512.wikitext
@@ -11,6 +11,7 @@
 *: Mandarin: {{t-|cmn|天哪|tr=tiān'na|sc=Hani}}
 {{trans-mid}}
 * Finnish: {{t-|fi|herranjestas}},  {{t|fi|jestas sentään}}
+* French: {{t|fr|Seigneur}}, {{t|fr|mon Dieu}}, {{t|fr|ciel}}
 {{trans-bottom}}
 
 ====Synonyms====
