--- a/en/o/optionality.855642.wikitext
+++ b/en/o/optionality.855642.wikitext
@@ -1,9 +1,11 @@
 ==English==
+
 ===Etymology===
 [[option]] + [[-al]] + [[-ity]]
 
 ===Noun===
 {{en-noun|optionalities}}
+
 # The potential for making additional choices which are available only after an initial choice.
 # {{finance|business}} The value of additional optional investment opportunities available only after having made an initial investment.
 #:''The short-term payoff for this is modest, but the '''optionality''' value is enormous.''
@@ -11,9 +13,15 @@
 #:  ''Some offices do not follow the corporate procedure, due to a culture of '''optionality'''.''
 
 ====Related terms====
-*[[option]]
-*[[optional]]
+* [[option]]
+* [[optional]]
+
+====Translations====
+{{trans-top|quality or state in which choice or discretion is allowed}}
+* Czech: {{t|cs|volitelnost|f}}
+{{trans-mid}}
+{{trans-bottom}}
 
 ====See also====
-*[[call]] {{context|finance}}
-*[[put]] {{context|finance}}
+* [[call]] {{context|finance}}
+* [[put]] {{context|finance}}
