--- a/en/q/qua.4315.wikitext
+++ b/en/q/qua.4315.wikitext
@@ -12,17 +12,15 @@ From {{etyl|la}} {{term|qua||in the capacity of|lang=la}}.
 {{en-adv|-}}
 
 # In the [[capacity]] of.
-
-====Quotations====
-* '''1954''': [[w:Gilbert Ryle|Gilbert Ryle]], ''Dilemmas: The Tarner Lectures, 1953'', <span style="font-variant:small-caps">dilemma vii: Perception</span>, page 99 (The Syndics of the Cambridge University Press)
-*: As anatomy, physiology and, later, psychology have developed into more or less well-organized sciences, they have necessarily and rightly come to incorporate the study of, among other things, the structures, mechanisms, and functionings of animal and human bodies '''''qua''''' percipient.
-* '''1962''': [[w:Norman Malcolm|Norman Malcolm]]; ''Dreaming''; chapter nine: “Judgments in Sleep”, page 39<sup>{1}</sup>; chapter twelve: “The Concept of Dreaming”, page 68<sup>{2}</sup> (1977 paperback reprint; Routledge & Kegan Paul; ISBN 0‒7100‒3836‒4 (c), 0‒7100‒8434‒X (p))
-*: <sup>{1}</sup> For sleep '''''qua''''' sleep has no experiential content: it cannot turn out, as remarked before, that a man was not asleep because he was ''not'' having some experience or other.
-*: <sup>{2}</sup> I am denying that a dream '''''qua''''' dream is a seeming, appearance or ‘semblance of reality’.
-* '''2003''': Roy Porter, ''Flesh in the Age of Reason'', page 458 (Penguin, 2004)
-*: It was '''qua''' poet that Byron resurrected the exploded and discarded immortal Christian soul by bodying it forth through the notion of soul conceived as poetic imagination.
-* '''2009''': Ken Levy, [http://papers.ssrn.com/sol3/papers.cfm?abstract_id=1404387 ''Killing, Letting Die, and the Case for Mildly Punishing Bad Samaritanism''], Georgia Law Review, p. 24.
-*: Blame '''''qua''''' attitude is the feeling or belief that an individual has committed a wrongdoing, usually a wrongful action and/or harm, and can be reasonably expected not to have committed this wrongdoing. Blame qua practice is the public expression of this attitude – usually by means of censure (written or verbal criticism) or punishment. Generally, the morally worse the wrongdoing, the more severe the censure/punishment.
+#* '''1954''': [[w:Gilbert Ryle|Gilbert Ryle]], ''Dilemmas: The Tarner Lectures, 1953'', <span style="font-variant:small-caps">dilemma vii: Perception</span>, page 99 (The Syndics of the Cambridge University Press)
+#*: As anatomy, physiology and, later, psychology have developed into more or less well-organized sciences, they have necessarily and rightly come to incorporate the study of, among other things, the structures, mechanisms, and functionings of animal and human bodies '''''qua''''' percipient.
+#* '''1962''': [[w:Norman Malcolm|Norman Malcolm]]; ''Dreaming''; chapter nine: “Judgments in Sleep”, page 39<sup>{1}</sup>; chapter twelve: “The Concept of Dreaming”, page 68<sup>{2}</sup> (1977 paperback reprint; Routledge & Kegan Paul; ISBN 0‒7100‒3836‒4 (c), 0‒7100‒8434‒X (p))
+#*: <sup>{1}</sup> For sleep '''''qua''''' sleep has no experiential content: it cannot turn out, as remarked before, that a man was not asleep because he was ''not'' having some experience or other.
+#*: <sup>{2}</sup> I am denying that a dream '''''qua''''' dream is a seeming, appearance or ‘semblance of reality’.
+#* '''2003''': Roy Porter, ''Flesh in the Age of Reason'', page 458 (Penguin, 2004)
+#*: It was '''qua''' poet that Byron resurrected the exploded and discarded immortal Christian soul by bodying it forth through the notion of soul conceived as poetic imagination.
+#* '''2009''': Ken Levy, [http://papers.ssrn.com/sol3/papers.cfm?abstract_id=1404387 ''Killing, Letting Die, and the Case for Mildly Punishing Bad Samaritanism''], Georgia Law Review, p. 24.
+#*: Blame '''''qua''''' attitude is the feeling or belief that an individual has committed a wrongdoing, usually a wrongful action and/or harm, and can be reasonably expected not to have committed this wrongdoing. Blame qua practice is the public expression of this attitude – usually by means of censure (written or verbal criticism) or punishment. Generally, the morally worse the wrongdoing, the more severe the censure/punishment.
 
 ====Translations====
 {{trans-top|in the capacity of}}
