--- a/en/s/stiff upper lip.803114.wikitext
+++ b/en/s/stiff upper lip.803114.wikitext
@@ -7,11 +7,12 @@ American in origin; earliest known use in 1815 [http://books.google.com/books?id
 ===Noun===
 {{en-noun|-|sg=[[stiff]] [[upper]] [[lip]]}}
 
-# {{idiom}} The quality of being [[resolute]] and showing [[self-restraint]], associated with stereotypical British people.
+# {{idiom}} The quality of being [[resolute]] and showing [[self-restraint]], associated with stereotypical British people; esp. as '''keep a stiff upper lip'''.
 #*'''1834''', [[w:Davy Crockett|David Crockett]], ''A Narrative of the Life of David Crockett'', [http://books.google.com/books?id=NjYDAAAAYAAJ&pg=PA130&dq=%22stiff+upper+lip%22 page 130]
 #*:I thought now the jig was mighty nigh up with me, but I determined to keep a '''stiff upper lip'''.
 #*'''1900''', [[w:Joseph Conrad|Joseph Conrad]], ''[[s:Lord Jim|Lord Jim]]'', [http://books.google.com/books?id=fPoLAAAAYAAJ&pg=PA49&dq=%22stiff+upper+lip%22 page 49]
 #*:A man may go pretty near through his whole sea-life without any call to show a '''stiff upper lip'''.
+#* {{RQ:Wodehouse Offing|II and XV|[...] Jeeves came in, bowler hat in hand, to say goodbye. A solemn moment, taxing our self-control to the utmost. However, we both '''kept the <!--sic-->upper lip stiff''', and after we had kidded back and forth for a while he started to withdraw. [...]<!--ch. XV--> He poked his head round the tree as I arrived, and when I waved a cheery hand at him, waved a fairly cheery hand at me. Though I only caught a glimpse of him, I could see that his '''upper lip was stiff'''.}}
 #*'''2005''', Ben Wright with Michael Patrick Shiels, ''Good Bounces and Bad Lies'', page 39
 #*:In typical British '''stiff upper lip''' fashion, the tournament organizers expected us to play into, and through, the menacing weather.
 
