--- a/en/m/multi.34076.wikitext
+++ b/en/m/multi.34076.wikitext
@@ -23,6 +23,14 @@ See [[multi-]]
 
 # [[many]]
 
+===Adjective===
+{{la-adj-1&2|multī|multa|multa|multum|multum}}
+
+# [[much]], [[many]]
+
+====Inflection====
+{{la-decl-pl-1&2|mult}}
+
 [[Category:Latin nouns]]
 
 [[el:multi]]
