--- a/en/i/increasement.746020.wikitext
+++ b/en/i/increasement.746020.wikitext
@@ -5,6 +5,9 @@
 
 #{{rare}} An [[increase]]; [[growth]].
 #{{rare}} An [[increment]]; an [[addition]]; [[augmentation]].
+#*'''1662''' Thomas Salusbury, ''Galileo's Dialogue Concerning the Two Chief World Systems'', Dialogue 2:
+#*:''... diminishing the velocity with decreasements like to the '''increasements''' acquired in the descent''
+
 
 ====Related terms====
 *[[decreasement]]
