--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -53,7 +53,7 @@
 {{trans-top|another time}}
 * [[Afrikaans]]: [[weer]], [[alweer]]
 * Arabic: {{t-|ar|مرة أخرى|f|tr=márra(tan) 'úkhra}},  {{t|ar|كرة أخرى|f|tr=kárra(tan) 'úkhra}} {{adverbial accusative used}}
-* Armenian: [[էլի]] (ēli) ''(Eastern-Armenian dialect)'', [[նորից]] (norits) ''(Eastern-Armenian)'', [[նորեն]] (noren) ''(Western-Armenian)''
+* Armenian: {{t|hy|էլի|tr=ēli}}, {{t|hy|կրկին|tr=krkin}}, {{qualifier|Eastern-Armenian}} {{t|hy|նորից|tr=noric’}}, {{qualifier|Western-Armenian}} {{t|hy|նորեն|tr=noren}}
 * [[Basque]]: [[berriro]]
 * [[Breton]]: [[adarre]]
 * Bulgarian: [[отново]] (otnovo), [[пак]] (pak)
