--- a/en/s/summer-house.801700.wikitext
+++ b/en/s/summer-house.801700.wikitext
@@ -4,6 +4,7 @@
 
 #A variant spelling of '''[[summerhouse]]'''.
 
+[[fi:summer-house]]
 [[ta:summer-house]]
 [[te:summer-house]]
 [[vi:summer-house]]
