t+is:[[svín]] t-balance ([[WT:EDIT|Assisted]]) <pig#9383076>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -154,6 +154,7 @@
 * Finnish: {{t+|fi|porsas}}, {{t+|fi|sika}}
 * French: {{t+|fr|cochon|m}}, {{t+|fr|porc|m}}
 * Greek: {{t+|el|γουρούνι|n|tr=gouroúni}}
+* Icelandic: {{t|is|svín|n}}
 {{trans-mid}}
 * Irish: {{t|ga|alpuire|m|xs=Irish}}
 * Italian: {{t+|it|porco|m}}, {{t+|it|maiale|m}}
