--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -173,9 +173,10 @@
 * French: {{t+|fr|salaud|m}}, {{t+|fr|cochon|m}}, {{t+|fr|porc|m}}
 * German: {{t+|de|Schwein|n}}
 * Greek: {{t+|el|γουρούνι|n|tr=gouroúni}},  {{t+|el|κτηνάνθρωπος|m|tr=ktinánθropos}}
+* Icelandic: {{t|is|svín|n}}
 * Italian: {{t+|it|bastardo|m}}, {{t+|it|bastarda|f}}, {{t+|it|stronzo|m}}, {{t+|it|stronza|f}}
-* Latvian: {{t+|lv|cūka|f|xs=Latvian}}
 {{trans-mid}}
+* Latvian: {{t+|lv|cūka|f|xs=Latvian}}
 * [[Macedonian]]: {{t-|mk|свиња|f|tr=svínja}}
 * Russian: [[свинья]] (svin’já) {{f}}
 * Serbian:
@@ -215,8 +216,9 @@
 * Dutch: {{t-|nl|flik|m}}
 * French: [[flic]] {{m}}, [[keuf]] {{m}} {{italbrac|verlan}}
 * German: {{t+|de|Bulle|m}}
-{{trans-mid}}
 * Greek: {{t+|el|γουρούνι|n|tr=gouroúni}}
+{{trans-mid}}
+* Icelandic: {{t|is|löggusvín|n}}
 * Norwegian: {{t+|no|purk|m}}
 * Polish: {{t+|pl|pies|m}}
 * Spanish: [[milico]] {{m}} {{italbrac|Andes|River Plate region}}
