--- a/en/h/hairnet.34110.wikitext
+++ b/en/h/hairnet.34110.wikitext
@@ -20,6 +20,7 @@
 {{trans-top|net designed to keep hair up}}
 * Dutch: {{t+|nl|haarnetje|n}}
 * Finnish: {{t-|fi|hiusverkko}}
+* French: {{t|fr|filet à cheveux|m}}
 * German: {{t+|de|Haarnetz|n}}
 {{trans-mid}}
 * [[Interlingua]]: [[rete]] pro le [[capillos]]
