/* Etymology */cf(r) → compare <marten#9395944>

--- a/en/m/marten.8230.wikitext
+++ b/en/m/marten.8230.wikitext
@@ -11,7 +11,7 @@
 * {{homophones|martin|Martin}} {{qualifier|in some accents}}
 
 ===Etymology===
-{{etyl|enm}} ''martryn'', from {{etyl|xno}} ''martrine'' 'marten fur', from Old Low Franconian *''marþrin'' 'pertaining to the marten' (cf. Old Saxon ''marthrin''), from *''marþr'' (cf. Dutch ''marter''), from {{proto|Germanic|''marþuz''}} 'wedding; marten' (compare German ''[[Marder]]'', Old English ''mearþ'' 'shrew', Crimean Gothic ''marzus'' 'wedding'), from {{proto|Indo-European}} *''martus'' 'bride'. For the semantic development, compare Italian ''donnola'' 'weasel', from ''donna'' 'lady', Greek ''nyfítsa'' 'weasel', from ''nymfē'' 'bride'. More at [[marry]].
+{{etyl|enm}} ''martryn'', from {{etyl|xno}} ''martrine'' 'marten fur', from Old Low Franconian *''marþrin'' 'pertaining to the marten' (cf. Old Saxon ''marthrin''), from *''marþr'' (compare Dutch ''marter''), from {{proto|Germanic|''marþuz''}} 'wedding; marten' (compare German ''[[Marder]]'', Old English ''mearþ'' 'shrew', Crimean Gothic ''marzus'' 'wedding'), from {{proto|Indo-European}} *''martus'' 'bride'. For the semantic development, compare Italian ''donnola'' 'weasel', from ''donna'' 'lady', Greek ''nyfítsa'' 'weasel', from ''nymfē'' 'bride'. More at [[marry]].
 
 ===Noun===
 {{en-noun}}
