t+ru:[[лигурский]] ([[WT:EDIT|Assisted]]) <Ligurian#9401521>

--- a/en/l/Ligurian.741748.wikitext
+++ b/en/l/Ligurian.741748.wikitext
@@ -9,6 +9,7 @@
 {{trans-top|Of or pertaining to Liguria}}
 * Italian: {{t+|it|ligure}}
 {{trans-mid}}
+* Russian: {{t|ru|лигурский|sc=Cyrl}}
 {{trans-bottom}}
 
 ===Noun===
