--- a/en/κ/κύων.4255.wikitext
+++ b/en/κ/κύων.4255.wikitext
@@ -18,7 +18,7 @@ From {{proto|Indo-European|ḱwṓ|lang=grc}}. Cognates include Latin {{term|can
 {{grc-decl-3rd-ln|form=MF-full|κύων|κῠν|κύν|κῠ|VS=κύον}}
 
 ====Usage notes====
-The alternate forms [[κύων]] (vocative singular) and [[κύνεσσι]] (dative plural) also exist.
+* The alternate forms [[κύων]] (vocative singular) and [[κύνεσσι]] (dative plural) also exist.
 
 ====References====
 *[[w:LSJ|LSJ]]
