--- a/en/κ/κύων.4255.wikitext
+++ b/en/κ/κύων.4255.wikitext
@@ -11,7 +11,7 @@ From {{proto|Indo-European|ḱwṓ|lang=grc}}. Cognates include Latin {{term|can
 
 # a [[dog]]
 # a [[bitch]]
-# {{context|pejorative|lang=grc}}
+# {{context|pejorative|lang=grc}} a [[bitch]]
 # an [[offensive]] [[person]]
 
 ====Inflection====
