/* Romansh */ Romansch <qua#9435695>

--- a/en/q/qua.4315.wikitext
+++ b/en/q/qua.4315.wikitext
@@ -130,7 +130,7 @@ The suffix has been used since around the 17th and 18th century. It is most like
 
 ----
 
-==Romansh==
+==Romansch==
 
 ===Adverb===
 {{infl|rm|adverb}}
