replace ε (U+03B5) with ɛ (U+025B) in IPA template <beheld#9436194>

--- a/en/b/beheld.6791.wikitext
+++ b/en/b/beheld.6791.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Pronunciation===
-* {{IPA|/bɪˈhεld/}}, {{SAMPA|/bI"hEld/}}
+* {{IPA|/bɪˈhɛld/}}, {{SAMPA|/bI"hEld/}}
 
 ===Verb===
 '''beheld'''
