t+pt:[[mesmo]] ([[WT:EDIT|Assisted]]) <again#9437863>

--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -135,7 +135,7 @@
 * Greek: {{t+|el|ξανά|tr=xaná}}, {{t+|el|πάλι|tr=páli}}
 * Hungarian: {{t+|hu|is}}
 * Japanese: {{t-|ja|って|tr=...tte}} {{qualifier|verbs in past tense, present meaning}}
-* {{trreq|Portuguese}}
+* Portuguese: {{t|pt|mesmo}}
 * Russian: {{t-|ru|говорите|tr=govorít'e}}
 * {{trreq|Spanish}}
 * Swedish: {{t+|sv|igen}}
