t+ang:[[brecan]] ([[WT:EDIT|Assisted]]) <break#9457112>

--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -192,7 +192,7 @@ The sense relating to a spell of weather is most likely to be used after a perio
 * [[Middle Dutch]]: {{tø|dum|breken}}
 * Mongolian: {{t|mn|хагарах|tr=hagarah|sc=Cyrl|xs=Mongolian}}
 * [[Old Dutch]]: {{tø|odt|brecan}}
-* {{trreq|Old English}}
+* [[Old English]]: {{t|ang|brecan}}
 * Persian: {{t|fa|خرد کردن|tr=xord kardan|xs=Persian}}, {{t+|fa|شکستن|tr=šekastan|xs=Persian}}
 * Polish: [[złamać się]] (two pieces), [[rozbić się]], [[połamać się]] (more pieces)
 * Portuguese: [[quebrar]], [[partir]], [[romper]] (if flexible material)
