--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -4,12 +4,11 @@
 {{wikipedia|Leporidae}}
 
 ===Pronunciation===
-* [[w:AHD|AHD]]: (''UK, US'') răb'it, (''Australia'') răb'ət
-* [[w:IPA|IPA]]: (''UK, US'') {{IPAchar|/ˈræbɪt/}}, (''Australia'') {{IPAchar|/ˈræbət/}}
-* [[w:SAMPA|SAMPA]]: (''UK, US'') /"r{bIt/, (''Australia'') /"r{b@t/
-* {{audio|en-uk-a rabbit.ogg|Audio - 'a rabbit' (UK)}}
-* {{audio|en-us-rabbit.ogg|Audio (US)}}
-* {{rhymes|æbɪt}}
+* {{a|UK|US}} {{enPR|răb'it}}, {{IPA|/ˈræbɪt/}}, {{SAMPA|/"r{bIt/}}
+*: {{audio|en-uk-a rabbit.ogg|Audio ('a rabbit') (UK)}}
+*: {{audio|en-us-rabbit.ogg|Audio (US)}}
+*: {{rhymes|æbɪt}}
+* {{a|Australia}} {{enPR|răb'ət}}, {{IPA|/ˈræbət/}}, {{SAMPA|/"r{b@t/}}
 * Homophones: [[rabbet]]
 
 ===Etymology 1===
