trans link [[Old English]] <then#9475720>

--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -56,7 +56,7 @@
 * Lithuanian: {{t-|lt|tada|xs=Lithuanian}}
 * Malay: [[pada masa yang sama]]
 * Norwegian: {{t+|no|da}}, {{t|no|den gang}}
-* Old English: {{t-|ang|þa|alt=þā|xs=Old English}}
+* [[Old English]]: {{t-|ang|þa|alt=þā|xs=Old English}}
 * Polish: [[wówczas]], [[wtedy]]
 * Portuguese: [[então]], [[naquele]] [[tempo]], [[naquela]] [[época]], [[nesse tempo]], [[nessa]] [[época]]
 * Romanian: {{t+|ro|atunci}}
@@ -87,7 +87,7 @@
 * Kurdish: [[paşî]], [[dûre]], [[piştre]], [[dûvre]], [[peyre]]
 * Malay: [[tidak lama kemudian]]
 * Norwegian: {{t+|no|så}}, {{t|no|deretter}}, {{t+|no|siden}}
-* Old English: {{t-|ang|þa|alt=þā|xs=Old English}}
+* [[Old English]]: {{t-|ang|þa|alt=þā|xs=Old English}}
 * Polish: (a) [[następnie]], (a) [[potem]]
 * Portuguese: [[então]],[[depois]], [[em seguida]]
 * Romanian: {{t+|ro|apoi}}
@@ -116,7 +116,7 @@
 * Kurdish: [[paşî]], [[dûre]], [[piştre]], [[dûvre]], [[peyre]]
 * Malay: [[selepas itu]]
 * Norwegian: {{t+|no|så}}, {{t|no|deretter}}
-* Old English: {{t-|ang|þa|alt=þā|xs=Old English}}
+* [[Old English]]: {{t-|ang|þa|alt=þā|xs=Old English}}
 * Polish: (a) [[następnie]], (a) [[potem]]
 * Portuguese: [[então]],[[depois]],[[seguidamente]], [[sequencialmente]]
 * Romanian: {{t+|ro|atunci}}
@@ -145,7 +145,7 @@
 * Lithuanian: {{t-|lt|tada|xs=Lithuanian}}
 * Malay: [[oleh sebab yang demikian]]
 * Norwegian: {{t+|no|da}}, {{t|no|i så fall}}
-* Old English: {{t-|ang|þa|alt=þā|xs=Old English}}
+* [[Old English]]: {{t-|ang|þa|alt=þā|xs=Old English}}
 * Polish: [[to]], [[wówczas]]
 * Portuguese: [[então]], [[nesse]] [[caso]]
 * Romanian: {{t+|ro|atunci}}
@@ -223,9 +223,9 @@
 * [[hent#English|hent]]
 
 [[Category:100 English basic words]]
-[[Category:English temporal location adverbs]]
-[[Category:English sequence adverbs]]
 [[Category:English conjunctive adverbs]]
+[[Category:English sequence adverbs]]
+[[Category:English temporal location adverbs]]
 [[Category:Time]]
 
 [[ar:then]]
