iwiki +[[:cy:bleed]] <bleed#9498564>

--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -132,6 +132,7 @@ From {{etyl|ang}} {{term|bledan|lang=ang}}
 [[Category:English irregular verbs]]
 
 [[ar:bleed]]
+[[cy:bleed]]
 [[el:bleed]]
 [[es:bleed]]
 [[fa:bleed]]
