--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -7,6 +7,10 @@
 ===Etymology===
 From {{etyl|enm}}, from {{etyl|ang}} ''[[þing#Old English|þing]]''.
 
+From a proto german word (German ''ding'', Scandivian languages ''ting'').
+
+Originally meaning an assembly, that handled political and/or cort issues. Later an issue at that assemly was called a "thing", leading to todays meaning "an object".
+
 ===Pronunciation===
 * {{enPR|thĭng}}, {{IPA|/θɪŋ/}}, {{SAMPA|/TIN/}}
 * {{audio|en-us-thing.ogg|Audio (US)}}
