/* Verb */ der [[bittenness]]  * [[unbitten]] <bitten#9529076>

--- a/en/b/bitten.6800.wikitext
+++ b/en/b/bitten.6800.wikitext
@@ -11,6 +11,10 @@
 # {{past participle of|[[bite]]}}
 #*''My dog has never '''bitten''' anyone before.''
 
+====Derived terms====
+* [[bittenness]]
+* [[unbitten]]
+
 [[Category:English irregular past participles]]
 
 ----
