--- a/en/g/grognard.855664.wikitext
+++ b/en/g/grognard.855664.wikitext
@@ -15,7 +15,8 @@ From {{etyl|fr|en}} {{term|grognard||lang=fr|old soldier}}
 ==French==
 
 ===Etymology===
-French ''[[grognard]]'', "grumbler" from Fr. ''[[grogner]]'' 1. snarl 2. grunt 3. growl 4. grumble ''[[râler]]'' 5. gripe ''[[râler]]'' and Fr. ''[[grognon]]'' 1. grouch 2. curmudgeon.
+{{attention|fr}}
+From {{term|grognard||grumbler|lang=fr}}, from {{term|grogner||snarl, grunt, growl, grumble|lang=fr}}, ''[[râler]]'' 5. gripe ''[[râler]]'' and Fr. ''[[grognon]]'' 1. grouch 2. curmudgeon.
 
 ===Noun===
 {{fr-noun|m}}
