replace g (U+0067) with ɡ (U+0261) in IPA template <gamble#9545468>

--- a/en/g/gamble.34097.wikitext
+++ b/en/g/gamble.34097.wikitext
@@ -6,7 +6,7 @@
 From {{etyl|ang}} [[gamenian]] 'to play', either via a dialectal survival of {{etyl|enm}} [[gammlen]], a variant of [[gamenen]] 'to play, jest, be merry', or via a derivative of [[gamel]] 'to play games'
 
 ===Pronunciation===
-* {{a|UK|US}} {{IPA|/ˈgæm.bəl/}}
+* {{a|UK|US}} {{IPA|/ˈɡæm.bəl/}}
 * {{rhymes|æmbəl}}
 * {{homophones|gambol}}
 
