--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -23,7 +23,7 @@ From {{etyl|enm}} ''[[plege#Middle English|plege]]'' from {{etyl|xno}} ''[[plege
 *: {{trreq|Cantonese}}
 *: {{trreq|Gan}}
 *: {{trreq|Hakka}}
-*: Mandarin: [[发誓]] (fāshì)
+*: Mandarin: {{t|zh|發誓|sc=Hani}}, {{t|zh|发誓|tr=fāshì|sc=Hani}}
 *: {{trreq|Min Dong}}
 *: {{trreq|Min Nan}}
 * {{trreq|Danish}}
@@ -76,7 +76,8 @@ From {{etyl|enm}} ''[[plege#Middle English|plege]]'' from {{etyl|xno}} ''[[plege
 {{trans-top|solemn promise}}
 * Arabic: {{Arab|[[ضمان]]}} {{IPAchar|(ɖamān)}} {{m}}
 * Armenian: {{t-|hy|ուխտ|tr=uxt}}
-* Chinese: [[誓言]] (shìyán)
+* Chinese:
+*: Mandarin: {{t|zh|誓言|tr=shìyán|sc=Hani}}, {{t|zh|誓詞|sc=Hani}}, {{t|zh|誓词|tr=shìcí|sc=Hani}}
 * Finnish: {{t+|fi|lupaus}}
 * French: {{t+|fr|gage|m}}
 * German: {{t+|de|Pfand|n}}
