t+hu:[[fogyasztás]] ([[WT:EDIT|Assisted]]) <consumption#9567041>

--- a/en/c/consumption.34058.wikitext
+++ b/en/c/consumption.34058.wikitext
@@ -30,6 +30,7 @@
 * German: {{t+|de|Konsum|m}}, {{t-|de|Verzehr|m}}
 {{trans-mid}}
 * Hebrew: [[צריכה]] (tzrikha) {{f}} (''act of consuming goods'')
+* Hungarian: {{t|hu|fogyasztás}}
 * Japanese: [[消費]] (しょうひ, shōhi)
 * Portuguese: {{t+|pt|consumo|m}}
 * Russian: {{t+|ru|потребление|n|tr=potreblénije}}
