iwiki +[[:es:misbegotten]] <misbegotten#9636548>

--- a/en/m/misbegotten.720286.wikitext
+++ b/en/m/misbegotten.720286.wikitext
@@ -9,6 +9,7 @@
 [[Category:English adjectives ending in -en]]
 
 [[et:misbegotten]]
+[[es:misbegotten]]
 [[io:misbegotten]]
 [[te:misbegotten]]
 [[vi:misbegotten]]
