iwiki +[[:tr:bleed]] <bleed#9643582>

--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -155,6 +155,7 @@ From {{etyl|ang}} {{term|bledan|lang=ang}}
 [[ta:bleed]]
 [[te:bleed]]
 [[th:bleed]]
+[[tr:bleed]]
 [[uk:bleed]]
 [[vi:bleed]]
 [[zh:bleed]]
