/* Anagrams */ horz, ref level <cop#9643715>

--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -74,13 +74,9 @@ Short for {{term|copper||police officer}}, itself from {{term|cop||one who cops}
 # {{transitive}} to receive, especially [[blame]] or [[punishment]] for a particular instance of [[wrongdoing]].
 
 ===Anagrams===
-* {{alphagram|cop}}
-* [[CPO#English|CPO]]
-* [[OPC#English|OPC]]
-* [[POC#English|POC]]
+* {{alphagram|cop}} [[CPO#English|CPO]], [[OPC#English|OPC]], [[POC#English|POC]]
 
-====References====
-{{rfc-level|References at L4+ not in L3 POS section|lang=en}}
+===References===
 * {{R:BBS}}
 
 ----
