Alternative forms changed to level 3, tagged translations table problem, trans link [[Scots]] <muskrat#9653364>

--- a/en/m/muskrat.8239.wikitext
+++ b/en/m/muskrat.8239.wikitext
@@ -1,7 +1,7 @@
 {{wikipedia}}
 ==English==
 
-====Alternative forms====
+===Alternative forms===
 * [[musk-rat]]
 
 ===Pronunciation===
@@ -20,6 +20,7 @@
 * [[musk shrew]]
 
 ====Translations====
+{{rfc-tsort|unparsed language line: *  Upper Sorbian   t hsb pižmo ,  t hsb pižmowa šćura ,  t hsb bizamowa myš }}
 {{trans-top|rodent}}
 * [[Basque]]: {{t|eu|arratoi musketadun}}
 * Belarusian: {{t|be|андатра|f}}
@@ -58,7 +59,7 @@
 * [[Romansch]]: {{t|rm|undatra}}
 * Russian: {{t|ru|ондатра|tr=ondátra|f}}
 * [[Sardinian]]: {{t|sc|medrona muscada}}, {{t|sc|topi muscau}}
-* Scots: {{t|sco|radan molach}}
+* [[Scots]]: {{t|sco|radan molach}}
 * Serbian:
 *: Cyrillic: {{t|sr|бизамски пацов|sc=Cyrl}}
 *: Roman: {{t|sr|bizamski pacov|sc=Latn}}
